--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="https://miro.medium.com/max/1200/1*J9wJ3CwvtFXJ4mmyzcwo8A.jpeg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+  <p>my new repo</p>
 
 </body>
 </html>
